# conv_ai_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: data_nb.ipynb  notebook.ipynb
src/final_project/: assistant_agent.py  config.py  constants.py  conversational_utils.py  data_sets.py  evaluation.py  main.py  models.py  pd_models.py  user_agent.py  utils.py
src/final_project/data/: custom_histories.json
src/final_project/data/conversations/annoying_base/: conversation_20251209_124217_f0bf2aaf.json  conversation_20251209_124244_e1010db2.json  conversation_20251209_124257_451f87cc.json  conversation_20251209_124336_244afba5.json  conversation_20251209_124421_d7120c28.json  conversation_20251209_124507_07bc1a98.json  conversation_20251209_124542_e98e8859.json  conversation_20251209_124621_bf31b278.json  conversation_20251209_124633_e2f41988.json  conversation_20251209_124706_4dd0412c.json  conversation_20251209_124734_fb54489b.json  conversation_20251209_124806_dfd94ba8.json  conversation_20251209_124824_41eaba4b.json  conversation_20251209_124905_91178772.json  conversation_20251209_124927_2a807041.json  conversation_20251209_125002_c0273f01.json  conversation_20251209_125048_0348147b.json  conversation_20251209_125107_ba22343a.json  conversation_20251209_125139_d8382bbf.json  conversation_20251209_125229_c2b1c643.json
src/final_project/data/evaluated_conversations/: custom_evaluated.json  evaluated.json
src/final_project/outputs/: README.md  adapter_config.json  chat_template.jinja  tokenizer_config.json
(+100 files in other folders)
